--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en" class="overflow-hidden bg-black text-white">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
