--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <script
-      defer
-      src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "a7709a4429b64c4c98ab6ba502630d05"}'
-    ></script>
+    <script src="https://cdn.counter.dev/script.js" data-id="d0426b24-28c0-4f99-923a-b8e7d4477346" data-utcoffset="1"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
